// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepIndicator component with buttons have to match snapshot 1`] = `
<StepIndicator
  active_item={1}
  active_url={null}
  class={null}
  className={null}
  current_step={null}
  data={
    Array [
      Object {
        "title": "Aa",
      },
      Object {
        "title": "Bb",
      },
      Object {
        "title": "Cc",
      },
    ]
  }
  hide_numbers={false}
  internalId="unique-buttons"
  mode={null}
  no_animation={null}
  on_change={null}
  on_click={null}
  on_item_render={null}
  overview_title={null}
  sidebar_id={null}
  skeleton={false}
  step_title={null}
  step_title_extended={null}
  use_navigation={true}
>
  <StepIndicatorProvider
    active_item={1}
    active_url={null}
    class={null}
    className={null}
    current_step={null}
    data={
      Array [
        Object {
          "title": "Aa",
        },
        Object {
          "title": "Bb",
        },
        Object {
          "title": "Cc",
        },
      ]
    }
    hide_numbers={false}
    internalId="unique-buttons"
    isSidebar={false}
    isV1={true}
    listAttributes={
      Object {
        "active_item": 1,
        "active_url": null,
        "children": null,
        "class": null,
        "className": null,
        "current_step": null,
        "data": Array [
          Object {
            "title": "Aa",
          },
          Object {
            "title": "Bb",
          },
          Object {
            "title": "Cc",
          },
        ],
        "hide_numbers": false,
        "internalId": "unique-buttons",
        "mode": null,
        "no_animation": null,
        "on_change": null,
        "on_click": null,
        "on_item_render": null,
        "overview_title": null,
        "sidebar_id": null,
        "skeleton": false,
        "step_title": null,
        "step_title_extended": null,
        "use_navigation": true,
      }
    }
    mode={null}
    no_animation={null}
    on_change={null}
    on_click={null}
    on_item_render={null}
    overview_title={null}
    sidebar_id="unique-buttons"
    skeleton={false}
    step_title={null}
    step_title_extended={null}
    use_navigation={true}
  >
    <div
      className="dnb-step-indicator-v1"
    >
      <StepIndicatorList>
        <div
          className="dnb-step-indicator"
        >
          <ol
            className="dnb-step-indicator__list"
          >
            <StepIndicatorItem
              currentItemNum={0}
              disabled={null}
              hide_numbers={false}
              inactive={null}
              is_active={null}
              is_current={null}
              key="0"
              mode={null}
              on_change={null}
              on_click={null}
              on_item_render={null}
              on_render={null}
              status={null}
              status_state="warn"
              step_title="%step"
              title="Aa"
              url={null}
              url_future={null}
              url_passed={null}
              use_navigation={null}
            >
              <li
                className="dnb-step-indicator__item dnb-step-indicator--visited"
              >
                <button
                  aria-describedby="unique-buttons-0"
                  className="dnb-anchor dnb-step-indicator__item-content dnb-step-indicator__item-content--link"
                  disabled={null}
                  onClick={[Function]}
                  status={null}
                  status_state="warn"
                  type="button"
                >
                  <StepItemWrapper>
                    <span
                      className="dnb-step-indicator__item-content--number"
                    >
                      1. 
                    </span>
                    <span
                      className="dnb-step-indicator__item-content--text"
                    >
                      Aa
                    </span>
                  </StepItemWrapper>
                </button>
                <span
                  aria-hidden={true}
                  className="dnb-sr-only"
                  id="unique-buttons-0"
                >
                  Steg 1 av 3
                </span>
              </li>
            </StepIndicatorItem>
            <StepIndicatorItem
              currentItemNum={1}
              disabled={null}
              hide_numbers={false}
              inactive={null}
              is_active={null}
              is_current={null}
              key="1"
              mode={null}
              on_change={null}
              on_click={null}
              on_item_render={null}
              on_render={null}
              status={null}
              status_state="warn"
              step_title="%step"
              title="Bb"
              url={null}
              url_future={null}
              url_passed={null}
              use_navigation={null}
            >
              <li
                aria-current="step"
                className="dnb-step-indicator__item dnb-step-indicator--active"
              >
                <button
                  aria-describedby="unique-buttons-1"
                  className="dnb-anchor dnb-step-indicator__item-content dnb-step-indicator__item-content--link"
                  disabled={null}
                  onClick={[Function]}
                  status={null}
                  status_state="warn"
                  type="button"
                >
                  <StepItemWrapper>
                    <span
                      className="dnb-step-indicator__item-content--number"
                    >
                      2. 
                    </span>
                    <span
                      className="dnb-step-indicator__item-content--text"
                    >
                      Bb
                    </span>
                  </StepItemWrapper>
                </button>
                <span
                  aria-hidden={true}
                  className="dnb-sr-only"
                  id="unique-buttons-1"
                >
                  Steg 2 av 3
                </span>
              </li>
            </StepIndicatorItem>
            <StepIndicatorItem
              currentItemNum={2}
              disabled={null}
              hide_numbers={false}
              inactive={null}
              is_active={null}
              is_current={null}
              key="2"
              mode={null}
              on_change={null}
              on_click={null}
              on_item_render={null}
              on_render={null}
              status={null}
              status_state="warn"
              step_title="%step"
              title="Cc"
              url={null}
              url_future={null}
              url_passed={null}
              use_navigation={null}
            >
              <li
                className="dnb-step-indicator__item"
              >
                <button
                  aria-describedby="unique-buttons-2"
                  aria-disabled={true}
                  className="dnb-anchor dnb-step-indicator__item-content dnb-step-indicator__item-content--link dnb-anchor--no-style"
                  disabled={true}
                  onClick={[Function]}
                  status={null}
                  status_state="warn"
                  type="button"
                >
                  <StepItemWrapper>
                    <span
                      className="dnb-step-indicator__item-content--number"
                    >
                      3. 
                    </span>
                    <span
                      className="dnb-step-indicator__item-content--text"
                    >
                      Cc
                    </span>
                  </StepItemWrapper>
                </button>
                <span
                  aria-hidden={true}
                  className="dnb-sr-only"
                  id="unique-buttons-2"
                >
                  Steg 3 av 3
                </span>
              </li>
            </StepIndicatorItem>
          </ol>
        </div>
      </StepIndicatorList>
    </div>
  </StepIndicatorProvider>
</StepIndicator>
`;

exports[`StepIndicator component with urls have to match snapshot 1`] = `
<StepIndicator
  active_item={null}
  active_url="?b"
  class={null}
  className={null}
  current_step={null}
  data={
    Array [
      Object {
        "title": "Aa",
        "url": "?a",
      },
      Object {
        "title": "Bb",
        "url": "?b",
      },
      Object {
        "title": "Cc",
        "url": "?c",
        "url_future": "",
      },
    ]
  }
  hide_numbers={false}
  internalId="unique"
  mode={null}
  no_animation={null}
  on_change={null}
  on_click={null}
  on_item_render={null}
  overview_title={null}
  sidebar_id="sidebar_id"
  skeleton={false}
  step_title={null}
  step_title_extended={null}
  use_navigation={null}
>
  <StepIndicatorProvider
    active_item={null}
    active_url="?b"
    class={null}
    className={null}
    current_step={null}
    data={
      Array [
        Object {
          "title": "Aa",
          "url": "?a",
        },
        Object {
          "title": "Bb",
          "url": "?b",
        },
        Object {
          "title": "Cc",
          "url": "?c",
          "url_future": "",
        },
      ]
    }
    hide_numbers={false}
    internalId="unique"
    isSidebar={false}
    isV1={true}
    listAttributes={
      Object {
        "active_item": null,
        "active_url": "?b",
        "children": null,
        "class": null,
        "className": null,
        "current_step": null,
        "data": Array [
          Object {
            "title": "Aa",
            "url": "?a",
          },
          Object {
            "title": "Bb",
            "url": "?b",
          },
          Object {
            "title": "Cc",
            "url": "?c",
            "url_future": "",
          },
        ],
        "hide_numbers": false,
        "internalId": "unique",
        "mode": null,
        "no_animation": null,
        "on_change": null,
        "on_click": null,
        "on_item_render": null,
        "overview_title": null,
        "sidebar_id": "sidebar_id",
        "skeleton": false,
        "step_title": null,
        "step_title_extended": null,
        "use_navigation": null,
      }
    }
    mode={null}
    no_animation={null}
    on_change={null}
    on_click={null}
    on_item_render={null}
    overview_title={null}
    sidebar_id="unique"
    skeleton={false}
    step_title={null}
    step_title_extended={null}
    use_navigation={null}
  >
    <div
      className="dnb-step-indicator-v1"
    >
      <StepIndicatorList>
        <nav
          className="dnb-step-indicator"
        >
          <ol
            className="dnb-step-indicator__list"
          >
            <StepIndicatorItem
              currentItemNum={0}
              disabled={null}
              hide_numbers={false}
              inactive={null}
              is_active={null}
              is_current={null}
              key="0"
              mode={null}
              on_change={null}
              on_click={null}
              on_item_render={null}
              on_render={null}
              status={null}
              status_state="warn"
              step_title="%step"
              title="Aa"
              url="?a"
              url_future={null}
              url_passed={null}
              use_navigation={null}
            >
              <li
                className="dnb-step-indicator__item dnb-step-indicator--visited"
              >
                <a
                  aria-describedby="unique-0"
                  className="dnb-anchor dnb-step-indicator__item-content dnb-step-indicator__item-content--link"
                  disabled={null}
                  href="?a"
                  onClick={[Function]}
                  status={null}
                  status_state="warn"
                >
                  <StepItemWrapper>
                    <span
                      className="dnb-step-indicator__item-content--number"
                    >
                      1. 
                    </span>
                    <span
                      className="dnb-step-indicator__item-content--text"
                    >
                      Aa
                    </span>
                  </StepItemWrapper>
                </a>
                <span
                  aria-hidden={true}
                  className="dnb-sr-only"
                  id="unique-0"
                >
                  Steg 1 av 3
                </span>
              </li>
            </StepIndicatorItem>
            <StepIndicatorItem
              currentItemNum={1}
              disabled={null}
              hide_numbers={false}
              inactive={null}
              is_active={null}
              is_current={null}
              key="1"
              mode={null}
              on_change={null}
              on_click={null}
              on_item_render={null}
              on_render={null}
              status={null}
              status_state="warn"
              step_title="%step"
              title="Bb"
              url="?b"
              url_future={null}
              url_passed={null}
              use_navigation={null}
            >
              <li
                aria-current="step"
                className="dnb-step-indicator__item dnb-step-indicator--active"
              >
                <a
                  aria-describedby="unique-1"
                  className="dnb-anchor dnb-step-indicator__item-content dnb-step-indicator__item-content--link"
                  disabled={null}
                  href="?b"
                  onClick={[Function]}
                  status={null}
                  status_state="warn"
                >
                  <StepItemWrapper>
                    <span
                      className="dnb-step-indicator__item-content--number"
                    >
                      2. 
                    </span>
                    <span
                      className="dnb-step-indicator__item-content--text"
                    >
                      Bb
                    </span>
                  </StepItemWrapper>
                </a>
                <span
                  aria-hidden={true}
                  className="dnb-sr-only"
                  id="unique-1"
                >
                  Steg 2 av 3
                </span>
              </li>
            </StepIndicatorItem>
            <StepIndicatorItem
              currentItemNum={2}
              disabled={null}
              hide_numbers={false}
              inactive={null}
              is_active={null}
              is_current={null}
              key="2"
              mode={null}
              on_change={null}
              on_click={null}
              on_item_render={null}
              on_render={null}
              status={null}
              status_state="warn"
              step_title="%step"
              title="Cc"
              url="?c"
              url_future=""
              url_passed={null}
              use_navigation={null}
            >
              <li
                className="dnb-step-indicator__item"
              >
                <span
                  aria-describedby="unique-2"
                  className="dnb-step-indicator__item-content dnb-step-indicator__item-content--static"
                  role="text"
                >
                  <StepItemWrapper>
                    <span
                      className="dnb-step-indicator__item-content--number"
                    >
                      3. 
                    </span>
                    <span
                      className="dnb-step-indicator__item-content--text"
                    >
                      Cc
                    </span>
                  </StepItemWrapper>
                </span>
                <span
                  aria-hidden={true}
                  className="dnb-sr-only"
                  id="unique-2"
                >
                  Steg 3 av 3
                </span>
              </li>
            </StepIndicatorItem>
          </ol>
        </nav>
      </StepIndicatorList>
    </div>
  </StepIndicatorProvider>
</StepIndicator>
`;

exports[`StepIndicator scss have to match default theme snapshot 1`] = `
"/*
* StepIndicator theme
*
*/
/**
 * This file is only used to make themes independent
 * so that they can get imported individually, without the core styles
 *
 */
/*
 * Utilities
 */
/*
* Deprecated v1
*
*/
.dnb-step-indicator-v1 .dnb-step-indicator__item-content--static {
  color: var(--color-emerald-green); }

.dnb-step-indicator-v1 .dnb-step-indicator__item-content--link {
  color: var(--color-sea-green); }

.dnb-step-indicator-v1 .dnb-step-indicator__item {
  margin-left: 4.5rem; }
  .dnb-step-indicator-v1 .dnb-step-indicator__item:first-child {
    margin-left: 0; }
  @media screen and (max-width: 50em) {
    .dnb-step-indicator-v1 .dnb-step-indicator__item {
      margin-left: 2rem; } }

.dnb-step-indicator-v1 .dnb-step-indicator::after {
  color: var(--color-mint-green); }

.dnb-step-indicator-v1 .dnb-step-indicator--active.dnb-step-indicator-v1 .dnb-step-indicator__item::after,
.dnb-step-indicator-v1 .dnb-step-indicator--active .dnb-step-indicator__item-content::after {
  background-color: var(--color-sea-green); }

.dnb-step-indicator-v1 .dnb-step-indicator span[hidden],
.dnb-step-indicator-v1 .dnb-step-indicator--active .dnb-step-indicator__item-content {
  font-weight: var(--font-weight-medium); }
  .dnb-step-indicator-v1 .dnb-step-indicator span[hidden]:not(:hover),
  .dnb-step-indicator-v1 .dnb-step-indicator--active .dnb-step-indicator__item-content:not(:hover) {
    color: var(--color-emerald-green); }

.dnb-step-indicator-v2 .dnb-step-indicator__item--current .dnb-button {
  font-weight: var(--font-weight-medium);
  --border-color: var(--color-sea-green);
  box-shadow: inset 0 0 0 0.125rem var(--border-color);
  /* iOS fix - because \\"inset\\" works not fine with border-radius */
  /* Safari fix - because \\"inset\\" works not fine with border-radius if the user zooms the page */
  border-color: transparent; }
  @supports (-webkit-touch-callout: none) {
    .dnb-step-indicator-v2 .dnb-step-indicator__item--current .dnb-button {
      box-shadow: 0 0 0 0.125rem var(--border-color); } }
  @media not all and (min-resolution: 0.001dpcm) {
    @supports (-webkit-appearance: none) and (stroke-color: transparent) and (not (-webkit-overflow-scrolling: touch)) {
      .dnb-step-indicator-v2 .dnb-step-indicator__item--current .dnb-button {
        box-shadow: 0 0 0 0.125rem var(--border-color); } } }
  @media screen and (-ms-high-contrast: none) {
    .dnb-step-indicator-v2 .dnb-step-indicator__item--current .dnb-button {
      box-shadow: inset 0 0 0 1px var(--color-sea-green); } }

.dnb-step-indicator-v2 .dnb-step-indicator__item--visited .dnb-button {
  background-color: var(--color-pistachio); }

.dnb-step-indicator-v2 .dnb-step-indicator__item--inactive .dnb-button {
  cursor: text;
  pointer-events: initial;
  user-select: initial; }
  .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive .dnb-button.dnb-button--secondary, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive .dnb-button.dnb-button--secondary:hover, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive .dnb-button.dnb-button--secondary:focus, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive .dnb-button.dnb-button--secondary:active {
    color: var(--color-black-80);
    background-color: var(--color-white);
    --border-color: var(--color-black-20);
    box-shadow: inset 0 0 0 0.0625rem var(--border-color);
    /* iOS fix - because \\"inset\\" works not fine with border-radius */
    /* Safari fix - because \\"inset\\" works not fine with border-radius if the user zooms the page */
    border-color: transparent; }
    @supports (-webkit-touch-callout: none) {
      .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive .dnb-button.dnb-button--secondary, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive .dnb-button.dnb-button--secondary:hover, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive .dnb-button.dnb-button--secondary:focus, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive .dnb-button.dnb-button--secondary:active {
        box-shadow: 0 0 0 0.0625rem var(--border-color); } }
    @media not all and (min-resolution: 0.001dpcm) {
      @supports (-webkit-appearance: none) and (stroke-color: transparent) and (not (-webkit-overflow-scrolling: touch)) {
        .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive .dnb-button.dnb-button--secondary, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive .dnb-button.dnb-button--secondary:hover, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive .dnb-button.dnb-button--secondary:focus, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive .dnb-button.dnb-button--secondary:active {
          box-shadow: 0 0 0 0.0625rem var(--border-color); } } }
    @media screen and (-ms-high-contrast: none) {
      .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive .dnb-button.dnb-button--secondary, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive .dnb-button.dnb-button--secondary:hover, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive .dnb-button.dnb-button--secondary:focus, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive .dnb-button.dnb-button--secondary:active {
        box-shadow: inset 0 0 0 1px var(--color-black-20); } }

.dnb-step-indicator-v2 .dnb-step-indicator__item--inactive.dnb-step-indicator__item--current .dnb-button.dnb-button--secondary, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive.dnb-step-indicator__item--current .dnb-button.dnb-button--secondary:hover, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive.dnb-step-indicator__item--current .dnb-button.dnb-button--secondary:focus, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive.dnb-step-indicator__item--current .dnb-button.dnb-button--secondary:active {
  --border-color: var(--color-black-80);
  box-shadow: inset 0 0 0 0.125rem var(--border-color);
  /* iOS fix - because \\"inset\\" works not fine with border-radius */
  /* Safari fix - because \\"inset\\" works not fine with border-radius if the user zooms the page */
  border-color: transparent; }
  @supports (-webkit-touch-callout: none) {
    .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive.dnb-step-indicator__item--current .dnb-button.dnb-button--secondary, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive.dnb-step-indicator__item--current .dnb-button.dnb-button--secondary:hover, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive.dnb-step-indicator__item--current .dnb-button.dnb-button--secondary:focus, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive.dnb-step-indicator__item--current .dnb-button.dnb-button--secondary:active {
      box-shadow: 0 0 0 0.125rem var(--border-color); } }
  @media not all and (min-resolution: 0.001dpcm) {
    @supports (-webkit-appearance: none) and (stroke-color: transparent) and (not (-webkit-overflow-scrolling: touch)) {
      .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive.dnb-step-indicator__item--current .dnb-button.dnb-button--secondary, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive.dnb-step-indicator__item--current .dnb-button.dnb-button--secondary:hover, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive.dnb-step-indicator__item--current .dnb-button.dnb-button--secondary:focus, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive.dnb-step-indicator__item--current .dnb-button.dnb-button--secondary:active {
        box-shadow: 0 0 0 0.125rem var(--border-color); } } }
  @media screen and (-ms-high-contrast: none) {
    .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive.dnb-step-indicator__item--current .dnb-button.dnb-button--secondary, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive.dnb-step-indicator__item--current .dnb-button.dnb-button--secondary:hover, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive.dnb-step-indicator__item--current .dnb-button.dnb-button--secondary:focus, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive.dnb-step-indicator__item--current .dnb-button.dnb-button--secondary:active {
      box-shadow: inset 0 0 0 1px var(--color-black-80); } }

html[data-whatinput='keyboard']
.dnb-step-indicator-v2 .dnb-step-indicator__item--current .dnb-button:not([disabled]):not(:active):not(:hover):focus {
  color: var(--color-emerald-green);
  background-color: var(--color-mint-green); }

.dnb-step-indicator-v2 .dnb-step-indicator__label, .dnb-step-indicator-v2 .dnb-step-indicator__label.dnb-p {
  font-size: var(--font-size-small);
  margin-bottom: 0.5rem; }

.dnb-step-indicator-v2 .dnb-step-indicator__button__status.dnb-button--secondary {
  background-color: var(--color-sand-yellow); }

.dnb-step-indicator-v2 .dnb-step-indicator__button__status--error.dnb-button--secondary {
  background-color: var(--color-fire-red-8); }

.dnb-step-indicator-v2 .dnb-step-indicator__button__status--info.dnb-button--secondary {
  background-color: var(--color-pistachio); }

.dnb-step-indicator-v2 .dnb-step-indicator__button__status .dnb-button__icon {
  align-self: flex-start;
  margin-top: 1rem;
  margin-right: 0.75rem; }

.dnb-step-indicator-v2 .dnb-step-indicator__button__status .dnb-step-indicator__item-content__number, .dnb-step-indicator-v2 .dnb-step-indicator__button__status .dnb-step-indicator__item-content__status {
  font-weight: var(--font-weight-basis); }

.dnb-step-indicator-v2 .dnb-step-indicator__button__status .dnb-step-indicator__item-content__status {
  margin-top: 0.5rem;
  font-size: var(--font-size-x-small);
  line-height: var(--font-size-basis);
  color: var(--color-black-80); }
"
`;

exports[`StepIndicator scss have to match snapshot 1`] = `
"/*
* DNB StepIndicator
*
*/
/**
 * This file is only used to make components independent
 * so that they can get imported individually, without the core styles
 *
 */
/*
 * Utilities
 */
/*
 * Scopes
 *
 */
/*
 * Document Reset
 *
 */
.dnb-step-indicator {
  font-family: var(--font-family-default);
  font-weight: var(--font-weight-basis);
  font-size: var(--font-size-small);
  font-style: normal;
  line-height: var(--line-height-basis);
  color: var(--color-black-80, #333);
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  /**
  * Ensure consistency and use the same as HTML reset -> html {...}
  * between base and code package
  */
  -moz-tab-size: 4;
  tab-size: 4;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  word-break: break-word;
  /**
  * 1. Remove repeating backgrounds in all browsers (opinionated).
  * 2. Add border box sizing in all browsers (opinionated).
  */
  /**
  * 1. Add text decoration inheritance in all browsers (opinionated).
  * 2. Add vertical alignment inheritance in all browsers (opinionated).
  */
  margin: 0;
  padding: 0; }
  .dnb-step-indicator *,
  .dnb-step-indicator ::before,
  .dnb-step-indicator ::after {
    background-repeat: no-repeat;
    /* 1 */
    box-sizing: border-box;
    /* 2 */ }
  .dnb-step-indicator ::before,
  .dnb-step-indicator ::after {
    text-decoration: inherit;
    /* 1 */
    vertical-align: inherit;
    /* 2 */ }

/*
 * StepIndicator component
 *
 */
/*
 * Deprecated v1
 *
 */
.dnb-step-indicator-v1 .dnb-step-indicator {
  position: relative;
  z-index: 1;
  display: block;
  padding: 0; }
  .dnb-step-indicator-v1 .dnb-step-indicator__list {
    display: flex;
    flex-direction: row;
    align-items: stretch;
    padding: 0;
    margin: 0;
    list-style: none; }
  .dnb-spacing .dnb-step-indicator-v1 .dnb-step-indicator__list,
  .dnb-spacing .dnb-step-indicator-v1 .dnb-step-indicator__list li {
    margin-top: 0;
    margin-bottom: 0; }
  .dnb-step-indicator-v1 .dnb-step-indicator__item {
    align-self: flex-end; }
  .dnb-step-indicator-v1 .dnb-step-indicator__item-content {
    font-size: var(--font-size-basis); }
    .dnb-step-indicator-v1 .dnb-step-indicator__item-contenta, .dnb-step-indicator-v1 .dnb-step-indicator__item-content.dnb-anchor, .dnb-step-indicator-v1 .dnb-step-indicator__item-content--static, .dnb-step-indicator-v1 .dnb-step-indicator__item-content--link {
      position: relative;
      z-index: 2;
      display: inline-flex;
      align-items: flex-end;
      margin: 0;
      padding: 0.25rem 0.25rem;
      height: 100%;
      border-bottom: none;
      text-decoration: none;
      box-shadow: none; }
    .dnb-step-indicator-v1 .dnb-step-indicator__item-content--link.dnb-anchor {
      line-height: var(--line-height-basis); }
    .dnb-step-indicator-v1 .dnb-step-indicator__item-content--link:focus[disabled],
    html:not([data-whatintent='touch']) .dnb-step-indicator-v1 .dnb-step-indicator__item-content--link:focus[disabled] {
      cursor: not-allowed; }
    .dnb-step-indicator-v1 .dnb-step-indicator__item-content--link:focus:not([disabled]),
    html:not([data-whatintent='touch']) .dnb-step-indicator-v1 .dnb-step-indicator__item-content--link:focus:not([disabled]) {
      outline: none; }
      html[data-whatinput='keyboard'] .dnb-step-indicator-v1 .dnb-step-indicator__item-content--link:focus:not([disabled]), html[data-whatinput='keyboard']
      html:not([data-whatintent='touch']) .dnb-step-indicator-v1 .dnb-step-indicator__item-content--link:focus:not([disabled]) {
        --border-color: var(--color-emerald-green);
        box-shadow: 0 0 0 0.125rem var(--border-color);
        border-color: transparent; }
        @media screen and (-ms-high-contrast: none) {
          html[data-whatinput='keyboard'] .dnb-step-indicator-v1 .dnb-step-indicator__item-content--link:focus:not([disabled]), html[data-whatinput='keyboard']
          html:not([data-whatintent='touch']) .dnb-step-indicator-v1 .dnb-step-indicator__item-content--link:focus:not([disabled]) {
            box-shadow: 0 0 0 0.125rem var(--color-emerald-green); } }
      .dnb-step-indicator-v1 .dnb-step-indicator__item-content--link:focus:not([disabled])::after,
      html:not([data-whatintent='touch']) .dnb-step-indicator-v1 .dnb-step-indicator__item-content--link:focus:not([disabled])::after {
        content: none; }
    .dnb-step-indicator-v1 .dnb-step-indicator__item-content--number {
      padding-right: 0.25rem;
      white-space: nowrap; }
    .dnb-step-indicator-v1 .dnb-step-indicator__item-content--text {
      text-align: left; }
    .dnb-step-indicator-v1 .dnb-step-indicator__item-content::after {
      content: '';
      position: absolute;
      z-index: 1;
      left: 0;
      bottom: 0;
      width: 100%;
      height: 3px;
      border-radius: 1.5px; }
  .dnb-step-indicator-v1 .dnb-step-indicator::after {
    content: '';
    position: absolute;
    z-index: -1;
    left: -100vw;
    bottom: 0;
    width: 100vw;
    height: 1px;
    color: var(--color-black);
    background-color: currentColor;
    box-shadow: 100vw 0 0 0 currentColor; }

@media screen and (min-width: 50.1em) {
  .dnb-step-indicator__sidebar {
    max-width: 20rem;
    margin-right: var(--spacing-x-large); }
    .dnb-step-indicator__sidebar .dnb-step-indicator__item {
      min-width: 320px; } }

@media screen and (max-width: 50.1em) {
  .dnb-step-indicator__sidebar--ssr-skeleton {
    visibility: hidden;
    overflow: hidden;
    width: 0;
    height: 5.5rem; } }

.dnb-step-indicator-v2 .dnb-step-indicator__list {
  display: flex;
  flex-direction: column;
  padding: 0;
  margin: 0;
  list-style: none; }

.dnb-step-indicator-v2 .dnb-step-indicator__trigger {
  display: flex;
  flex-direction: column; }

.dnb-step-indicator-v2 .dnb-step-indicator__trigger__button,
.dnb-step-indicator-v2 .dnb-step-indicator__item .dnb-button {
  overflow: hidden;
  justify-content: space-between;
  border-radius: 0.25rem;
  will-change: height;
  transition: height 400ms cubic-bezier(0.42, 0, 0, 1); }
  .dnb-step-indicator-v2 .dnb-step-indicator__trigger__button .dnb-button__text,
  .dnb-step-indicator-v2 .dnb-step-indicator__item .dnb-button .dnb-button__text {
    text-align: left; }
  .dnb-step-indicator-v2 .dnb-step-indicator__trigger__button.dnb-button--has-icon .dnb-button__text,
  .dnb-step-indicator-v2 .dnb-step-indicator__item .dnb-button.dnb-button--has-icon .dnb-button__text {
    margin-right: 1rem; }
  .dnb-step-indicator-v2 .dnb-step-indicator__trigger__button .dnb-button__alignment,
  .dnb-step-indicator-v2 .dnb-step-indicator__item .dnb-button .dnb-button__alignment {
    order: 2; }
  html[data-visual-test] .dnb-step-indicator-v2 .dnb-step-indicator__trigger__button, html[data-visual-test]
  .dnb-step-indicator-v2 .dnb-step-indicator__item .dnb-button {
    transition-duration: 1ms !important; }

.dnb-step-indicator-v2 .dnb-step-indicator__trigger button.dnb-step-indicator-v2 .dnb-step-indicator__trigger__button {
  margin-top: 0.5rem; }

.dnb-step-indicator-v2 .dnb-step-indicator__item {
  margin-bottom: 1rem; }
  .dnb-step-indicator-v2 .dnb-step-indicator__item .dnb-button__icon {
    opacity: 1;
    transition: opacity 1400ms ease-in-out; }
    html[data-visual-test] .dnb-step-indicator-v2 .dnb-step-indicator__item .dnb-button__icon {
      transition-duration: 1ms !important; }
  .dnb-step-indicator-v2 .dnb-step-indicator__item:not(.dnb-step-indicator__item--visited) .dnb-button:not(.dnb-step-indicator__button__status)
.dnb-button__icon {
    opacity: 0; }

.dnb-step-indicator-v2 .dnb-step-indicator__item-content {
  display: flex;
  flex-wrap: nowrap;
  padding: 0.5rem 0; }
  .dnb-step-indicator-v2 .dnb-step-indicator__item-content__number {
    padding-right: 0.5rem;
    white-space: nowrap; }
  .dnb-step-indicator-v2 .dnb-step-indicator__item-content__wrapper {
    display: flex;
    flex-direction: column; }

.dnb-step-indicator-v2 .dnb-step-indicator__button__status .dnb-step-indicator__item-content__status {
  color: var(--color-black-80);
  font-size: var(--font-size-x-small); }
"
`;
